// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testDuck resetTestData should reset data 1`] = `
Object {
  "additionalState": "test",
  "data": 0,
}
`;

exports[`testDuck updateTestData should add one to data 1`] = `
Object {
  "additionalState": "test",
  "data": 1,
}
`;
